plugins/groups/wiki/wiki.css
/**
 * @package	 hubzero-cms
 * @file		plugins/groups/wiki/wiki.css
 * @copyright   Copyright 2005-2011 Purdue University. All rights reserved.
 * @license	 http://www.gnu.org/licenses/lgpl-3.0.html LGPLv3
 */

/* Sections */
	.group_wiki .section {
		padding: 0;
	}
	.group_wiki #hubForm label.hide {
		display: none;
	}
	.group_wiki .comment-add-btn {
		float: right;
		margin-top: -1em;
	}

/* Wiki options */
	#page_options li {
		display: inline-block;
		margin-left: 0.5em;
	}

/* Attachments */
	#attachments {
		margin: 0;
		padding: 0;
		min-width: 100px;
		background: #fff;
	}
	#attachments form,
	#attachments fieldset,
	#attachments table {
		padding: 0;
		margin: 0;
	}
	#attachments table {
		width: auto;
	}
	#attachments tbody td {
		padding: 0.2em 0.4em;
	}
	#attachments .delete {
		padding-left: 0;
		background: transparent;
	}

/* (sub) Tabs */
	#sub-menu li a span:before {
		font-family: "Fontcons";
		margin-right: 0.4em;
	}
	#sub-menu li.page-main,
	#sub-menu li.page-index {
		float: right;
	}
	#sub-menu li.page-main a,
	#sub-menu li.page-index a {
		background: transparent;
		border-radius: 0;
		color: inherit;
		text-shadow: none;
		border-top: none;
		border-left: none;
		border-right: none;
		height: auto;
		padding: 0;
		margin: 5px 0 0 30px;
		display: inline;
	}
	#sub-menu li.page-main a span,
	#sub-menu li.page-index a span {
		margin: 0;
		padding: 0;
		height: auto;
		display: inline;
	}
	#sub-menu li.page-text a span:before {
		content: "\f036";
	}
	#sub-menu li.page-edit a span:before {
		content: "\270E";
	}
	#sub-menu li.page-comments a span:before {
		content: "\f086";
	}
	#sub-menu li.page-history a span:before {
		content: "\f017";
	}
	#sub-menu li.page-delete a span:before {
		content: "\f057";
	}
	#sub-menu li.page-main a span:before {
		content: "\f071";
	}
	#sub-menu li.page-index a span:before {
		content: "\f03a";
	}
	#sub-menu li.page-main span,
	#sub-menu li.page-index span {
		background: transparent;
	}

/* Tags */
	.article-tags {
		background: #F4F4F4; /* url("/components/com_wiki/assets/img/tag_orange.png") 0.5em 0.5em no-repeat;*/
		margin: 0 0 1em 0;
		padding: 0.5em;
	}
	.com_groups .group_wiki .article-tags h3 {
		display: none;
	}
	.article-tags ol {
		margin: 0;
		padding: 0;
		max-height: none;
		font-size: 90%;
	}
	.article-tags p {
		margin: 0;
		padding: 0;
	}
/* Timestamp */
	.timestamp {
		margin: 4em 0 1em 0;
		padding: 0.5em 0.7em;
		border-top: 1px solid #eee;
		font-size: 90%;
		color: #aaa;
		background-color: #f4f4f4;
		text-align: left;
	}

/* Table of contents */
	.wikipage .article-toc,
	.wikipage .article-search {
		background-color: #eee;
		margin: 1em 0;
		padding: 0;
	}
	.wikipage .article-toc {
		width: 300px;
		/*float: left;*/
	}
	.wikipage .article-toc h3,
	.wikipage .article-search h3 {
		margin: 0;
		padding: 0.4em;
		color: #fff;
		background: #777;
		font-size: 1em;
		text-shadow: none;
		font-weight: bold;
		text-align: center;
	}
	.wikipage .article-toc ul {
		margin: 0;
		padding: 0.4em;
		max-height: 300px;
		overflow: auto;
		border: 1px solid #aaa;
		background: #fff;
		list-style: none;
	}
	.wikipage .article-toc ul li {
		background-image: none;
	}
	.wikipage .article-toc ul ul {
		max-height: none;
		border: none;
		margin: 0 0 0 1em;
		padding: 0;
	}
	.wikipage .article-toc li {
		margin: 0;
		padding: 0.2em;
	}

	.wikipage fieldset {
		border: 1px solid #ccc;
		background: #fff;
		margin: 1em -18px;
		padding: 1em;
	}
	.wikipage fieldset legend {
		margin: 0 1em;
		padding: 0 1em;
	}

/* Diffs */
	.diff-versions {
		margin: 0;
	}
	.diff-versions dt {
		font-weight: bold;
		margin-top: 0.5em;
	}
	.diffs {
		margin: 1em 0;
		border: 2px solid #ccc;
	}
	.com_groups .main .subject table.diffs td, 
	.com_groups .main .subject table.diffs th,
	.diffs td, 
	.diffs th {
		border: 1px solid #fff;
		margin: 0;
		padding: 0.2em 0.8em;
	}
	.diffs th {
		text-align: right;
		background-color: #efefef;
	}
	.diff-marker {
		width: 1em;
		text-align: center;
	}
	.diff-deletedline {
		border: 1px solid #EFCCC2; 
		background: #FFF2EF;
		margin: 1em 0;
		padding: 1em;
		color: #CC0000;
	}
	.diff-addedline {
		border: 1px solid #DAE6DA;
		background: #F2FFF2;
		margin: 1em 0;
		padding: 1em;
		color: #360;
	}
	del.diffchange {
		color: #CC0000;
	}
	ins.diffchange {
		color: #360;
	}
	#file-uploader .qq-upload-button {
		background:#222;
		background-image: -webkit-linear-gradient(top, #444, #222);
		background-image: -moz-linear-gradient(top, #444, #222);
		background-image: -o-linear-gradient(top, #444, #222);
		background-image: -ms-linear-gradient(top, #444, #222);
		background-image: linear-gradient(top, #444, #222);
		padding:10px;
		position:relative;
		color:#FFF;
		text-align:center;
		-webkit-border-radius:3px;
		-moz-border-radius:3px;
		border-radius:3px;
		border:1px solid #000;
		border-top:1px solid #666;
		margin:0 0 10px 0;
	}
	#file-uploader .qq-upload-button:active {
		background-image: -webkit-linear-gradient(top, #222, #444);
		background-image: -moz-linear-gradient(top, #222, #444);
		background-image: -o-linear-gradient(top, #222, #444);
		background-image: -ms-linear-gradient(top, #222, #444);
		background-image: linear-gradient(top, #222, #444);
	}
	#file-uploader .qq-upload-drop-area {
		padding: 0.7em;
		border: 1px solid #ccc;
		-webkit-border-radius:3px;
		-moz-border-radius:3px;
		border-radius:3px;
		background: #666;
		color: #fff;
		text-align: center;
	}
	#hubForm .explaination #file-uploader ul.qq-upload-list {
		margin: 0;
	}
	#file-uploader .qq-upload-size {
		margin: 0 0 0 2em;
	}
	#file-uploader .qq-upload-failed-text {
		display: none;
	}

	#attachments {
		margin: 0;
		padding: 0;
		min-width: 100px;
		background: #fff;
	}
	#hubForm .explaination #attachments {
		border: 1px solid #ccc;
		max-height: 300px;
		overflow: scroll;
	}
	#hubForm .explaination #attachments p {
		margin: 0;
		padding: 0.2em 0.5em;
	}
	#attachments form,
	#attachments fieldset,
	#attachments table {
		padding: 0;
		margin: 0;
	}
	#attachments table {
		width: auto;
	}
	#attachments tbody td {
		padding: 0.2em 0.4em;
	}
	#attachments tbody td span {
		display: block;
		overflow: scroll;
		max-width: 180px;
		word-wrap: break-word;
	}
	#attachments .delete {
		padding-left: 0;
		background: transparent;
	}
/* Admonitions */
	div.admon-caution, 
	div.admon-important, 
	div.admon-note, 
	div.admon-tip, 
	div.admon-warning {
		border: 1pt solid #E5E5E5;
		background-color: #F9F9FF;
		color: black;
		margin: 10pt 30pt 10pt 30pt;
		background-repeat: no-repeat;
		background-position: 8px 8px;
		min-height: 64px; /*64=48+8+8 but doesn't work with IE*/
		padding-left: 64px;
	}
	div.admon-caution p, 
	div.admon-important p, 
	div.admon-note p, 
	div.admon-tip p, 
	div.admon-warning p {
		margin-top: 8px; /*to align text with bg graphic*/
	}
	div.admon-tip { 
		background-image: url("/components/com_wiki/assets/img/admon-tip.png"); 
	}
	div.admon-note { 
		background-image: url("/components/com_wiki/assets/img/admon-note.png"); 
	}
	div.admon-important { 
		background-image: url("/components/com_wiki/assets/img/admon-important.png"); 
	}
	div.admon-caution { 
		background-image: url("/components/com_wiki/assets/img/admon-caution.png"); 
	}
	div.admon-warning { 
		background-image: url("/components/com_wiki/assets/img/admon-warning.png"); 
	}

/* Wiki pages */
	.wikipage {
		margin: 0;
		padding: 1em 0 0 18px;
	}
	.wikipage h1,
	.wikipage h1,
	.wikipage h2,
	.wikipage h3,
	.wikipage h4,
	.wikipage h5,
	.wikipage h6 {
		color: #333;
		text-shadow: none;
		font-weight: bold;
		padding: 0;
		margin: 0.618em 0;
		border: none;
		line-height: 1.2;
	}
	.wikipage h1 {
		font-size: 1.8em;
	}
	.wikipage h2 span {
		color: #333;
	}
	.wikipage h1, 
	.wikipage h2, 
	.wikipage h3 {
		margin-left: -18px;
	}
	.wikipage ul,
	.wikipage ol {
		padding: 0;
		margin: 0 0 1em 0;
	}
	.wikipage ul {
		list-style-type: disc;
	}
	.wikipage ol {
		list-style-type: decimal;
	}
	.wikipage li {
		padding: 0;
		margin: 0em 0 0em 2em;
	}
	.wikipage ul li {
	}
	.wikipage dd {
		color: #888;
	}
	.wikipage table {
		border: 2px solid #ccc;
		width: auto;
	}
	.wikipage table td, 
	.wikipage table th {
		border: 1px solid #ccc;
		margin: 0;
		padding: 0.2em 0.4em;
	}
	.wikipage blockquote {
		margin: 2em 0 2.5em 0;
		padding: 5px 0 5px 10px;
	}
	.wikipage blockquote:before {
		display: none;
	}
	.wikipage pre {
		font-family: "Bitstream Vera Sans Mono", Courier, Monaco, ProFont, "American Typewriter", "Andale Mono", monospace;
		color: #555;
		background: #f7f7f7;
		border: 1px solid #d7d7d7;
		margin: 1em 1.75em;
		padding: .25em;
		overflow: auto;
		font-size: 0.85em;
		line-height: 1.95em;
		white-space: pre;
		white-space: pre-wrap;
		word-wrap: break-word;
		white-space: -moz-pre-wrap;
		white-space: -pre-wrap;
		white-space: -o-pre-wrap;
	}
	.wikipage .pre {
		font-family: "Bitstream Vera Sans Mono", Courier, Monaco, ProFont, "American Typewriter", "Andale Mono", monospace;
		color: #555;
		background-color: #f7f7f7;
		border: 1px solid #d7d7d7;
		margin: 1em 1.35em;
		padding: .25em;
		overflow: auto;
		font-size: 1.15em;
		line-height: 1.35em;
	}
	.wikipage tt,
	.wikipage code {
		display: inline-block;
		color: #666; /*#600;*/
		border: 1px solid #ddd; /*#edc;*/
		-webkit-border-radius: .25em;
		-moz-border-radius: .25em;
		-ms-border-radius: .25em;
		-o-border-radius: .25em;
		border-radius: .25em;
		padding: 0 0.3em;
		background: #fafafa;
	}

	.modified-date {
		color: #aaa;
		font-size: 90%;
	}
	.wikipage hr {
		border-top: 1px solid #ccc;
		background-image: none;
		height: 1px;
		width: auto;
		visibility: visible;
		display: block;
	}

	.timestamp .article-usage {
		float: right;
	}

	/* Links */
	.wikipage a.ext-link {
		background: url("/components/com_wiki/assets/img/extlink.gif") 0 0.4em no-repeat;
		padding-left: 15px;
	}
	.wikipage a.missing {
		background: url("/components/com_wiki/assets/img/missinglink.gif") 0 0.4em no-repeat;
		padding-left: 7px;
	}

	.wikipage .mbox-content {
		border: 1px solid #aaa;
		background: #fff;
		border-left: 10px solid #f28500;
		padding: 0;
		width: 250px;
		font-size: 0.85em;
		position: relative;
	}
	.wikipage .mbox-content p.mbox-text {
		padding: 0.4em 0.4em 0.4em 4.4em;
		margin: 0;
		line-height: 1.4em;
	}
	.wikipage .mbox-content .mbox-date {
		font-style: italic;
	}
	.wikipage .mbox-unreferenced p:before {
		font-family: "Fontcons";
		content: "\275D"; /* \f072 */
		color: #ddd;
		font-size: 3em;
		line-height: 1;
		position: absolute;
		top: 0.1em;
		left: 0.3em;
	}
	.wikipage .rellink {
		font-style: italic;
		padding-left: 1.6em;
		margin-bottom: 0.5em;
	}
	.wikipage td {
		background-color: #fff;
	}
	.wikipage th {
		background-color: #f7f7f7;
	}

/* Figures */
	.wikipage .figure {
		display: inline-block;
		background: #efefef;
		border: 1px solid #e1e1e1;
		padding: 4px;
	}
	.wikipage .figure img {
		margin: 0; /*.5em;*/
		padding: 0;
		background: transparent;
		text-align: center;
		display: block;
	}
	.wikipage .figure a {
		border: none;
	}
	.wikipage .figcaption {
		display: block;
		margin: 0;
		padding: 0.5em 0;
		background: #efefef;
		font-size: 0.85em;
	}
	
	.page-length {
		color: #ccc;
	}
	.page-length.increase {
		color: green;
	}
	.page-length.decrease {
		color: red;
	}

	a.markup {
		display: inline-block;
		width: 1em;
		height: 1em;
		overflow: hidden;
		border: none;
		color: #999;
		margin-left: 1em;
	}
	a.markup:before {
		content: "\f036";
		font-family: "Fontcons";
		font-size: 1.2em;
	}
	a.markup:hover {
		color: #333;
		border: none;
	}

/* Hide the sidebar if the page is too narrow */
@media only screen and (max-width: 1064px) {
	.group_wiki .aside,
	.group_wiki .subject {
		float: none;
	}
	.group_wiki .aside {
		display: none;
	}
	.group_wiki .subject {
		padding-left: 0;
		padding-right: 0;
		margin-right: 0;
	}
}

